# Puma

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conanfile.py
Config/: BaseOnly.awc  Puma.awc  PumaServer.awc
Config/CMake/: PumaEnv.cmake
Config/QMake/: Puma.pri
Docs/: AuthClientSdk.md  AuthServerSdk.md  Dependencies.md  Doxyfile  GenerateDocs.bat  OIDC.md  SBOM.json
Docs/Benutzerhandbuch/: Benutzerhandbuch_DE.md  Benutzerhandbuch_EN.md  Benutzerhandbuch_RO.md  Benutzerhandbuch_RU.md  Benutzerhandbuch_SV.md  Benutzerhandbuch_ZH.md  Puma_Kompakt_DE.pptx
Impl/AuthClientSdk/: AdministrationWidget.acc  AuthClientSdk.acc  AuthClientSdk.accl  AuthClientSdk.cpp  AuthClientSdk.h  CAdministrationViewWidget.cpp  CAdministrationViewWidget.h  CLoginViewWidget.cpp  CLoginViewWidget.h  LoginWidget.acc
Impl/AuthClientSdk/CMake/: CMakeLists.txt
Impl/AuthClientSdk/QMake/: AuthClientSdk.pro
Impl/AuthServerSdk/: AuthServerSdk.acc  AuthServerSdk.accl  AuthServerSdk.cpp  AuthServerSdk.h  AuthServerSdk.qrc
Impl/AuthServerSdk/CMake/: CMakeLists.txt
Impl/AuthServerSdk/QMake/: AuthServerSdk.pro
Impl/AuthServerSdk/VC/: AuthServerSdk.rc.xtracf  FileSubstitCopyApp.acc  FileSubstitCopyApp.accl
Impl/Plugins/PumaSettingsPlugin/: DllMain.cpp  PumaSettingsPlugin.acc  PumaSettingsPlugin.accl
Impl/PumaClient/: Main.cpp  PumaClient.acc  PumaClient.accl  PumaClient.qrc  TestFeatures.xml
Impl/PumaClient/CMake/: CMakeLists.txt
Impl/PumaClient/QMake/: PumaClient.pro
Impl/PumaClient/VC/: FileSubstitCopyApp.acc  PumaClient.rc.xtracf
Impl/PumaClientSdk/: AdministrationWidget.acc  AdministrationWidget.accl  CAdministrationViewWidget.cpp  CAdministrationViewWidget.h  CLoginViewWidget.cpp  CLoginViewWidget.h  LoginWidget.acc  LoginWidget.accl  PumaClientSdk.acc  PumaClientSdk.accl  PumaClientSdk.cpp  PumaClientSdk.h
Impl/PumaClientSdk/CMake/: CMakeLists.txt
Impl/PumaClientSdk/QMake/: PumaClientSdk.pro
Impl/PumaDataPck/: PumaDataPck.cpp  PumaDataPck.h
Impl/PumaDataPck/CMake/: CMakeLists.txt
Impl/PumaDbPck/: PumaDbPck.cpp  PumaDbPck.h
Impl/PumaDbPck/CMake/: CMakeLists.txt
Impl/PumaGqlPck/: PumaGqlPck.cpp  PumaGqlPck.h
Impl/PumaGqlPck/CMake/: CMakeLists.txt
Impl/PumaGqlPck/QMake/: PumaGqlPck.pro
Impl/PumaServer/: Main.cpp  PumaServer.acc  PumaServer.accl  PumaServer.qrc
Impl/PumaServer/CMake/: CMakeLists.txt
Impl/PumaServer/Install/: PumaServer.iss  ReadMe.txt  install_DebugVC16_64.bat  install_ReleaseVC16_64.bat  install_ReleaseVC17_64.bat
Impl/PumaServer/QMake/: PumaServer.pro
Impl/PumaServer/VC/: FileSubstitCopyApp.acc  Puma.rc.xtracf  PumaServer.rc.xtracf
Impl/PumaServerConfigurator/: Main.cpp  PumaServerConfigurator.acc  PumaServerConfigurator.accl  PumaServerConfigurator.qrc
Impl/PumaServerConfigurator/CMake/: CMakeLists.txt
Impl/PumaServerPg/: Main.cpp  PumaServerPg.acc  PumaServerPg.accl  PumaServerPg.qrc
Impl/PumaServerPg/CMake/: CMakeLists.txt
Impl/PumaServerPgTest/: Main.cpp  PumaServerPgTest.acc  PumaServerPgTest.accl  PumaServerPgTest.qrc
Impl/PumaServerSl/: Main.cpp  PumaServerSl.acc  PumaServerSl.accl  PumaServerSl.qrc
Impl/PumaServerSlTest/: Main.cpp  PumaServerSlTest.acc  PumaServerSlTest.accl  PumaServerSlTest.qrc
Include/puma/: Version.h
Include/pumadb/CMake/: CMakeLists.txt
Include/pumagql/: CPumaGqlRemoteRepresentationControllerComp.cpp  CPumaGqlRemoteRepresentationControllerComp.h
Include/pumaqml/: pumaqml.qrc
Include/pumaqml/CMake/: CMakeLists.txt
Include/pumatest/: CAddUserControllerTest.cpp  CAddUserControllerTest.h  CAuthClientSdkTest.cpp  CAuthClientSdkTest.h  CAuthServerLifecycleTest.cpp  CAuthServerLifecycleTest.h  CAuthorizationControllerTest.cpp  CAuthorizationControllerTest.h  CAuthorizationFailedControllerTest.cpp  CAuthorizationFailedControllerTest.h  CGetUserListControllerTest.cpp  CGetUserListControllerTest.h  CPersonalAccessTokenTest.cpp  CPersonalAccessTokenTest.h  CRemoveUserControllerTest.cpp  CRemoveUserControllerTest.h  CTestBase.cpp  CTestBase.h  CUserCollectionControllerTest.cpp  CUserCollectionControllerTest.h  CUserControllerTest.cpp  CUserControllerTest.h  PumaTestMain.cpp
Include/pumatest/CMake/: CMakeLists.txt
Install/: Doxyfile  Script.iss  _Create_VC15_Commercial.bat  _Create_VC15_OpenSource.bat
Install/Commercial/: Header.txt  License.txt
Install/InternalParts/: Create_Commercial.acc  Create_Commercial.accl  Create_LGPL.acc  Create_LGPL.accl  Create_OpenSource.acc  Create_OpenSource.accl
Install/LGPL/: Header.txt  License.txt
Install/PumaServerConfigurator/: PumaServerConfigurator.iss  install_DebugVC16_64.bat  install_ReleaseVC16_64.bat
Install/PumaServerPg/: PumaServerPg.iss  ReadMe.txt  install_DebugVC17_64.bat  install_ReleaseVC17_64.bat
Install/PumaServerSl/: PumaServerSl.iss  ReadMe.txt  install_DebugVC17_64.bat  install_ReleaseVC17_64.bat
Partitura/PumaGraphQlVoce.arp/: PumaGQLClientEngine.acc  PumaGQLClientEngine.accl
Partitura/PumaVoce.arp/: Authorization.acc  Authorization.accl  PostgresMigrations.acc  PostgresMigrations.accl  ProductPermissions.acc  ProductPermissions.accl  Products.acc  Products.accl  PumaDatabasePostgres.acc  PumaDatabasePostgres.accl  PumaDatabaseSQLite.acc  PumaDatabaseSQLite.accl  PumaGQLClientEngine.acc  PumaGQLClientEngine.accl  PumaHandlers.acc  PumaHandlers.accl  PumaLocalization.acc  PumaLocalization.accl  PumaPersonalAccessTokenController.acc  PumaPersonalAccessTokenSqlRepository.acc  PumaServerBase.acc  PumaServerBase.accl  PumaSettings.acc  PumaSettings.accl  PumaSettingsRepresentation.acc  PumaSettingsRepresentation.accl  PumaTestHandler.acc  PumaTestHandler.accl  RootDataController.acc  RootDataController.accl  VersionInfo.acc  VersionInfo.acc.xtrsvn
Tests/Docker/: README.md  prepare-tests.bat  run-tests-windows.bat
Tests/PumaTestKit/: README.md  Run-AuthSdkTests.ps1
Tests/TenantApiPostman/: README.md  Run-CiTests-Sqlite.ps1  Run-CiTests.ps1  Tenant_System_Full.postman_collection.json  Tenant_System_Full.postman_environment.json  package-lock.json  package.json  permission_visibility_matrix.iteration.json
(+66 files in other folders)
